manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shs-ws
  namespace: shs-ws
spec:
  selector:
    app: shs-ws
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
