manifests/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wsunnel
  name: wsunnel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wsunnel
  template:
    metadata:
      labels:
        app: wsunnel
      annotations:
        xk8s.v1.cni.cncf.io/networks: '[
          {
            "name": "localnet-l2", 
            "interface": "l2",
            "ips": [
              "10.0.43.2/24"
              ]
          }
        ]'
    spec:
      containers:
      - command:
        - /server.sh
        image: quay.io/fdeutsch/wsunnel:latest
        name: wsunnel
        securityContext:
          privileged: true
          procMount: Unmasked
        stdin: true
        tty: true
      hostNetwork: true
      serviceAccountName: wsunnel
      terminationGracePeriodSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: wsunnel
spec:
  selector:
    app: wsunnel
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: wsunnel
  labels: {}
spec:
  to:
    kind: Service
    name: wsunnel
  tls: null
  port:
    targetPort: 80
  alternateBackends: []
